@@ -160,7 +160,7 @@ p, li { white-space: pre-wrap; }
          </property>
         </widget>
        </item>
-       <item row="1" column="1" >
+       <item row="0" column="1" >
         <spacer>
          <property name="orientation" >
           <enum>Qt::Horizontal</enum>
@@ -194,14 +194,14 @@ p, li { white-space: pre-wrap; }
          </property>
         </widget>
        </item>
-       <item row="1" column="2" >
-        <widget class="QLineEdit" name="IPEdit" >
+       <item row="0" column="2" >
+        <widget class="QLineEdit" name="hostnameEdit" >
          <property name="toolTip" >
           <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;/head>&lt;body style=" white-space: pre-wrap; font-family:Sans Serif; font-size:9pt; font-weight:400; font-style:normal; text-decoration:none;">&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">enter an IP-address or hostname under which iTALC can reach the client (use ':' for specifying an optional port-number)&lt;/p>&lt;/body>&lt;/html></string>
          </property>
         </widget>
        </item>
-       <item row="1" column="0" >
+       <item row="0" column="0" >
         <widget class="QLabel" name="label_4" >
          <property name="sizePolicy" >
           <sizepolicy>
@@ -226,7 +226,7 @@ p, li { white-space: pre-wrap; }
          </property>
         </widget>
        </item>
-       <item row="0" column="0" >
+       <item row="1" column="0" >
         <widget class="QLabel" name="label_3" >
          <property name="sizePolicy" >
           <sizepolicy>
@@ -244,7 +244,7 @@ p, li { white-space: pre-wrap; }
          </property>
         </widget>
        </item>
-       <item row="0" column="2" >
+       <item row="1" column="2" >
         <widget class="QLineEdit" name="nameEdit" >
          <property name="sizePolicy" >
           <sizepolicy>
@@ -255,7 +255,7 @@ p, li { white-space: pre-wrap; }
           </sizepolicy>
          </property>
          <property name="toolTip" >
-          <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;/head>&lt;body style=" white-space: pre-wrap; font-family:Sans Serif; font-size:9pt; font-weight:400; font-style:normal; text-decoration:none;">&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Name of the host which is displayed in iTALC.&lt;/p>&lt;/body>&lt;/html></string>
+          <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;/head>&lt;body style=" white-space: pre-wrap; font-family:Sans Serif; font-size:9pt; font-weight:400; font-style:normal; text-decoration:none;">&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Optional nickname of the host which is displayed in iTALC.&lt;/p>&lt;/body>&lt;/html></string>
          </property>
         </widget>
        </item>
@@ -558,8 +558,8 @@ p, li { white-space: pre-wrap; }
   </layout>
  </widget>
  <tabstops>
+  <tabstop>hostnameEdit</tabstop>
   <tabstop>nameEdit</tabstop>
-  <tabstop>IPEdit</tabstop>
   <tabstop>macEdit</tabstop>
   <tabstop>classRoomComboBox</tabstop>
   <tabstop>settingsTabWidget</tabstop>
